Add static files

--- a/index.html
+++ b/index.html
@@ -5,104 +5,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport všem</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
 </head>
 <body>
     <div class="logo-container">
-        <img src="../static/sabca_logo3.png" alt="Logo" class="logo">
+        <img src="static/sabca_logo3.png" alt="Logo" class="logo">
     </div>
     <div class="divider"></div>
     <div class="line">
-        <a href="/kraj/praha">
+        <a href="district.html?district=praha">
             <div class="circle-container">
-                <img src="../static/praha.jpg" alt="District Image" class="circle"> 
+                <img src="static/praha.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Praha</p>
             </div>
         </a>
-        <a href="/kraj/stredocesky">
+        <a href="district.html?district=stredocesky">
             <div class="circle-container">
-                <img src="../static/stredocesky.jpg" alt="District Image" class="circle"> 
+                <img src="static/stredocesky.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Středočeský kraj</p>
             </div>
         </a>
-        <a href="/kraj/jihocesky">
+        <a href="district.html?district=jihocesky">
             <div class="circle-container">
-                <img src="../static/jihocech.jpg" alt="District Image" class="circle">
+                <img src="static/jihocech.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Jihočeský kraj</p>
             </div>
         </a>
-        <a href="/kraj/plzen">
+        <a href="district.html?district=plzen">
             <div class="circle-container">
-                <img src="../static/plzen.jpg" alt="District Image" class="circle">
+                <img src="static/plzen.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Plzeňský kraj</p>
             </div>
         </a>
-        <a href="/kraj/karlovarsky">
+        <a href="district.html?district=karlovarsky">
             <div class="circle-container">
-                <img src="../static/karlovarsky.jpeg" alt="District Image" class="circle">
+                <img src="static/karlovarsky.jpeg" alt="District Image" class="circle"> 
                 <p class="district-name">Karlovarský kraj</p>
             </div>
         </a>
     </div>
     <div class="line">
-        <a href="/kraj/ustecky">
+        <a href="district.html?district=ustecky">
             <div class="circle-container">
-                <img src="../static/ustecky.jpg" alt="District Image" class="circle">
+                <img src="static/ustecky.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Ústecký kraj</p>
             </div>
         </a>
-        <a href="/kraj/liberec">
+        <a href="district.html?district=liberec">
             <div class="circle-container">
-                <img src="../static/liberec.jpg" alt="District Image" class="circle">
+                <img src="static/liberec.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Liberecký kraj</p>
             </div>
         </a>
-        <a href="/kraj/kralovehradecky">
+        <a href="district.html?district=kralovehradecky">
             <div class="circle-container">
-                <img src="../static/hradec.webp" alt="District Image" class="circle">
+                <img src="static/hradec.webp" alt="District Image" class="circle"> 
                 <p class="district-name">Královehradecký kraj</p>
             </div>
         </a>
-        <a href="/kraj/pardubicky">
+        <a href="district.html?district=pardubicky">
             <div class="circle-container">
-                <img src="../static/pardubice.jpg" alt="District Image" class="circle"> 
-                <p class="district-name">Pardubický kraj</p> 
+                <img src="static/pardubice.jpg" alt="District Image" class="circle"> 
+                <p class="district-name">Pardubický kraj</p>
             </div>
         </a>
-        <a href="/kraj/vysocina">
+        <a href="district.html?district=vysocina">
             <div class="circle-container">
-                <img src="../static/vysocina.jpg" alt="District Image" class="circle">
+                <img src="static/vysocina.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Kraj Vysočina</p>
             </div>
         </a>
     </div>
     <div class="line">
-        <a href="/kraj/jihomoravsky">
+        <a href="district.html?district=jihomoravsky">
             <div class="circle-container">
-                <img src="../static/jihomorav.jpg" alt="District Image" class="circle">
+                <img src="static/jihomorav.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Jihomoravský kraj</p>
             </div>
         </a>
-        <a href="/kraj/olomouc">
+        <a href="district.html?district=olomouc">
             <div class="circle-container">
-                <img src="../static/olomouc.jpg" alt="District Image" class="circle"> 
+                <img src="static/olomouc.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Olomoucký kraj</p>
             </div>
         </a>
-        <a href="/kraj/moravskoslezsky">
+        <a href="district.html?district=moravskoslezsky">
             <div class="circle-container">
-                <img src="../static/moravskoslezk.jpg" alt="District Image" class="circle">
+                <img src="static/moravskoslezk.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Moravskoslezský kraj</p>
             </div>
         </a>
-        <a href="/kraj/zlin">
+        <a href="district.html?district=zlin">
             <div class="circle-container">
-                <img src="../static/zlin.jpg" alt="District Image" class="circle"> 
+                <img src="static/zlin.jpg" alt="District Image" class="circle"> 
                 <p class="district-name">Zlínský kraj</p>
             </div>
         </a>
-    </a>
     </div>
-    <p></p>
 </body>
 </html>
